[gd_scene load_steps=7 format=2]

[ext_resource path="res://themes/Grey_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://fonts/LeagueMono-Light.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Container" type="Control" parent="CenterContainer"]
margin_left = 62.0
margin_top = 40.0
margin_right = 962.0
margin_bottom = 560.0
rect_min_size = Vector2( 900, 520 )
rect_pivot_offset = Vector2( 450, 230 )

[node name="InputLabel" type="Label" parent="CenterContainer/Container"]
margin_left = 12.0
margin_right = 90.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "Input:"

[node name="InputText" type="TextEdit" parent="CenterContainer/Container"]
margin_left = 10.0
margin_top = 37.0
margin_right = 910.0
margin_bottom = 187.0
rect_min_size = Vector2( 300, 100 )
wrap_enabled = true
caret_blink = true

[node name="ConvertButton" type="Button" parent="CenterContainer/Container"]
margin_left = 10.0
margin_top = 193.0
margin_right = 130.0
margin_bottom = 223.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Convert!"

[node name="OutputLabel" type="Label" parent="CenterContainer/Container"]
margin_left = 12.0
margin_top = 291.0
margin_right = 103.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 3 )
text = "Output:"

[node name="OutputText" type="TextEdit" parent="CenterContainer/Container"]
margin_left = 10.0
margin_top = 327.0
margin_right = 910.0
margin_bottom = 477.0
rect_min_size = Vector2( 300, 100 )
wrap_enabled = true
caret_blink = true

[node name="CopyTextButton" type="Button" parent="CenterContainer/Container"]
margin_left = 10.0
margin_top = 485.0
margin_right = 130.0
margin_bottom = 515.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Copy Text!"
[connection signal="text_changed" from="CenterContainer/Container/InputText" to="." method="_on_InputText_text_changed"]
[connection signal="pressed" from="CenterContainer/Container/ConvertButton" to="." method="_on_ConvertButton_pressed"]
[connection signal="pressed" from="CenterContainer/Container/CopyTextButton" to="." method="_on_CopyTextButton_pressed"]
